--- a/style.css
+++ b/style.css
@@ -166,7 +166,16 @@ article>div{
     color: #333333;
 }
 
-
+header>div{
+    background-color:rgb(255, 255, 255);
+    border:4px solid #000000;
+    text-align:center;
+    font-size:30px;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
 
 
 
